--- a/playlists.yaml
+++ b/playlists.yaml
@@ -80,6 +80,7 @@ series:
         - cKFoutBT3MQ
         - 8ViFP_5xqvs
         - bI6c3D4n8SY
+        - W3jOLt2Of-8
     - name: xBCrafted
       playlist: https://www.youtube.com/playlist?list=PLmtS5lzk1pBRiPgX2KvX19UZOkoGWxHO5
     - name: Xisuma
