Add Iskall s08e10 and Beef s08e06

--- a/playlists.yaml
+++ b/playlists.yaml
@@ -53,6 +53,7 @@ series:
         - jc_FKpLQjs0
         - Xd3UD4cMinQ
         - sk6hUtVEgL8
+        - xy_iy5PnKEE  # s08e10
     - name: JoeHillsSays
       playlist: https://www.youtube.com/playlist?list=PL7On8E0_x1toZvZ00oFnof0nCll8B9v06
     - name: Keralis
@@ -81,6 +82,7 @@ series:
         - 8ViFP_5xqvs
         - bI6c3D4n8SY
         - W3jOLt2Of-8
+        - BAW9jAR98tI  # s08e06
     - name: xBCrafted
       playlist: https://www.youtube.com/playlist?list=PLmtS5lzk1pBRiPgX2KvX19UZOkoGWxHO5
     - name: Xisuma
