VintageBeef s08e07 and Etho s08e05

--- a/playlists.yaml
+++ b/playlists.yaml
@@ -24,6 +24,7 @@ series:
         - orTAukkBJeM
         - Dmm8garUciI
         - 7ItziYeoWDc
+        - bRjwr086jdU # s08e05
     - name: FalseSymmetry
       playlist: https://www.youtube.com/playlist?list=PLgj0MXHeQpb_PF2-lK05WoClbqdLi-UvG
     - name: GeminiTay
@@ -83,6 +84,7 @@ series:
         - bI6c3D4n8SY
         - W3jOLt2Of-8
         - BAW9jAR98tI  # s08e06
+        - BI8iEPeTK1A
     - name: xBCrafted
       playlist: https://www.youtube.com/playlist?list=PLmtS5lzk1pBRiPgX2KvX19UZOkoGWxHO5
     - name: Xisuma
