--- a/playlists.yaml
+++ b/playlists.yaml
@@ -56,6 +56,7 @@ series:
         - sk6hUtVEgL8
         - xy_iy5PnKEE  # s08e10
         - 5_nXuEO7VD4
+        - 83jQ_7GvOzM
     - name: JoeHillsSays
       playlist: https://www.youtube.com/playlist?list=PL7On8E0_x1toZvZ00oFnof0nCll8B9v06
     - name: Keralis
