--- a/playlists.yaml
+++ b/playlists.yaml
@@ -25,6 +25,7 @@ series:
         - Dmm8garUciI
         - 7ItziYeoWDc
         - bRjwr086jdU # s08e05
+        - v8SP6RAHOpE
     - name: FalseSymmetry
       playlist: https://www.youtube.com/playlist?list=PLgj0MXHeQpb_PF2-lK05WoClbqdLi-UvG
     - name: GeminiTay
@@ -57,6 +58,7 @@ series:
         - xy_iy5PnKEE  # s08e10
         - 5_nXuEO7VD4
         - 83jQ_7GvOzM
+        - mJ4ymPeUh3I
     - name: JoeHillsSays
       playlist: https://www.youtube.com/playlist?list=PL7On8E0_x1toZvZ00oFnof0nCll8B9v06
     - name: Keralis
